# ImageFusion

./: .gitignore  CMakeLists.txt  README.md
include/: xml_writer.hpp
src/: main.cpp
